# learn-llm

./: .gitignore  Readme.md  pyproject.toml
langchain-rag/: .env  demo.py  demo_with_sentence_transformer_embed.py
pg_vector_db/: pg_vector.sql
transformers/: demo.py
word_embedding_gensim/: demo.py  main.ipynb  visualize_vectors.ipynb
